--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -26,7 +26,7 @@
     "titlePart2": "познакомимся!",
     "description1": "Привет, я Никита, и мне не очень нравится писать о себе, но очень нравится писать код! :P",
     "description2": "Я умею создавать сайты с помощью",
-    "description3": "Мне интересно создавать красивые и уникальные (порой слишком уникальные)",
+    "description3": "Мне интересно создавать красивые и уникальные (порой слишком 'уникальные')",
     "description4": "В разработке я чаще всего использую",
     "HTML_CSS_JS": "HTML, CSS и JavaScript",
     "webApplications": "веб-приложения",
@@ -43,7 +43,7 @@
   "footer": {
     "createdBy": "Реализовал",
     "name": "Никита Цилосани"
-  }, 
+  },
   "about_me": {
     "title": "Узнаем кто",
     "highlight_title": "Я",
@@ -67,8 +67,104 @@
     "title": "которые я использую",
     "highlight": "Инструменты"
   },
-  "days_i_code": {
-    "title": "Сколько я пишу",
-    "code": "код"
+  "my_github": {
+    "title": "Мой",
+    "github": "Github",
+    "visit_profile": "Посетить мой профиль на Github"
+  },
+  "projects": {
+    "title": "Мои",
+    "highlight": "Работы",
+    "subtitle": "Тут представлена часть моих проектов",
+    "russian_travel": {
+      "title": "Путешествия по России",
+      "description": "Проект создан в рамках учебной программы Яндекс.Практикум по специальности 'Веб-разработчик'. Это адаптивный сайт, разработанный с использованием методики файловой структуры Nested BEM."
+    },
+    "mesto_russia": {
+      "title": "Mesto Russia",
+      "description": "Интерактивное веб-приложение, которое позволяет пользователям делиться своими фотографиями. Пользователи могут добавлять новые карточки с фотографиями, ставить лайки, удалять карточки, редактировать свой профиль, а также имеет формы регистрации и входа."
+    },
+    "diploma_project": {
+      "title": "Дипломный проект",
+      "description": "Дипломный проект выполненный в рамках курса 'Веб-разработчик' от Яндекс Практикум."
+    },
+    "old_portfolio": {
+      "title": "Мое портфолио (старое)",
+      "description": "Данный проект представляет собой веб-портфолио, созданное для демонстрации моих навыков и проектов."
+    },
+    "palc_project": {
+      "title": "Проект группы Palc",
+      "description": "Это фронтенд проект для сайта группы Palc, разработанный с использованием React и React Router. Включает в себя несколько страниц с информацией о творчестве группы, турах, мерче и галерее."
+    },
+    "calculator": {
+      "title": "Калькулятор",
+      "description": "Простой (ну или не совсем) веб-калькулятор. Проект написан на HTML, CSS и JavaScript."
+    }
+  },
+  "resume": {
+    "title": "Мое <span class=\"highlight\">Резюме</span>",
+    "name": "Цилосани Никита",
+    "location": "Санкт-Петербург, Россия",
+    "contacts": {
+      "phone": "+7 991 919 1817",
+      "email": "nikitaandr2508@gmail.com",
+      "github": "GitHub",
+      "linkedin": "Nikita Tsilosani",
+      "telegram": "Tsi_Nick"
+    },
+    "sections": {
+      "experience": "Опыт работы",
+      "freelance": "Фриланс",
+      "projects": "Проекты",
+      "skills": "Навыки",
+      "education": "Образование"
+    },
+    "jobs": {
+      "diar": {
+        "company": "DiAR",
+        "position": "Фронтенд разработчик",
+        "date": "Июль 2024 — по настоящее время",
+        "description": "Поддержка и разработка функционала для сайтов",
+        "tasks": [
+          "Разработка посадочных страниц на 1С-Битрикс, оптимизация скорости и UX",
+          "Унификация кода с БЭМ и создание переиспользуемых компонентов",
+          "Оптимизация сайта: настройка редиректов, минификация, lazy-loading",
+          "Разработка UI-компонентов и переписывание на React для улучшения производительности"
+        ]
+      },
+      "freelance": {
+        "position": "Frontend Developer",
+        "date": "Февраль 2024 — по настоящее время",
+        "jobs": [
+          {
+            "title": "Лендинг для свадебного агентства",
+            "description": "Создал адаптивный сайт с анимацией и продуманной структурой контента."
+          },
+          {
+            "title": "Сайт музыкальной группы",
+            "description": "Создание сайта с уникальным стилем группы."
+          }
+        ]
+      }
+    },
+    "projects": {
+      "palc": {
+        "title": "Palc Frontend",
+        "tech": "React",
+        "description": "Проект включает страницы с информацией о группе, турах, мерче и галерее."
+      },
+      "moviesExplorer": {
+        "title": "Movies-explorer",
+        "tech": "React, Node.js",
+        "description": "Закрепление навыков backend и frontend разработки с MongoDB и Express."
+      }
+    },
+    "skills": "JavaScript, React, Node.js, MongoDB, Express, HTML, CSS, БЭМ, Git",
+    "education": {
+      "yandex": {
+        "institution": "Яндекс.Практикум",
+        "specialty": "Специальность: Веб-разработчик"
+      }
+    }
   }
 }
