--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -26,7 +26,7 @@
     "titlePart2": "Get Acquainted!",
     "description1": "Hi, I'm Nikita, and I don't really enjoy writing about myself, but I do enjoy writing code! :P",
     "description2": "I know how to create websites using",
-    "description3": "I'm interested in building beautiful and unique (sometimes very 'unique')",
+    "description3": "I really enjoy building beautiful and unique (sometimes very 'unique')",
     "description4": "In development, I mostly use",
     "HTML_CSS_JS": "HTML, CSS, and JavaScript",
     "webApplications": "web applications",
@@ -46,7 +46,7 @@
   },
   "about_me": {
     "title": "Know Who",
-    "highlight_title": "I'M",
+    "highlight_title": "I'am",
     "intro": "Hello, I'm Nikita Tsilosani from",
     "from": "St. Petersburg, Russia",
     "work": "Currently, I'm working at the company developing landing pages and maintaining the main website at",
