--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -49,7 +49,7 @@
     "highlight_title": "Я",
     "intro": "Всем привет, я Цилосани Никита из",
     "from": "Санкт-Петербурга, Россия",
-    "work": "Сейчас я работаю в компании и разрабатываю лэндинги и поддерживаю основной сайт компании",
+    "work": "Сейчас я работаю в компании и разрабатываю лэндинги, поддерживаю основной сайт компании",
     "education": "Фронтенд разработке я обучался в",
     "self_study": "и самостоятельно продолжаю изучать новые технологии.",
     "hobbies": "Помимо разработки, я также увлекаюсь:",
@@ -108,7 +108,7 @@
     "contacts": {
       "phone": "+7 991 919 1817",
       "email": "nikitaandr2508@gmail.com",
-      "github": "GitHub",
+      "github": "TsiNik2508",
       "linkedin": "Nikita Tsilosani",
       "telegram": "Tsi_Nick"
     },
