Update MyGithub component: add  GitHub calendar

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -69,7 +69,7 @@
   },
   "my_github": {
     "title": "My",
-    "github": "Github",
+    "github": "Activity",
     "visit_profile": "Visit my Github profile"
   },
   "projects": {
