--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -96,9 +96,9 @@
       "title": "Проект группы Palc",
       "description": "Это фронтенд проект для сайта группы Palc, разработанный с использованием React и React Router. Включает в себя несколько страниц с информацией о творчестве группы, турах, мерче и галерее."
     },
-    "calculator": {
-      "title": "Калькулятор",
-      "description": "Простой (ну или не совсем) веб-калькулятор. Проект написан на HTML, CSS и JavaScript."
+    "todo": {
+      "title": "Список дел",
+      "description": "Это простое ToDo-приложение, которое позволяет пользователю управлять списком задач. Приложение разработано с использованием TypeScript, React, и React Hooks."
     }
   },
   "resume": {
