--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -99,6 +99,10 @@
     "todo": {
       "title": "Список дел",
       "description": "Это простое ToDo-приложение, которое позволяет пользователю управлять списком задач. Приложение разработано с использованием TypeScript, React, и React Hooks."
+    },
+    "chat": {
+      "title": "ChatApp",
+      "description": "ChatApp — это веб-приложение для обмена сообщениями в реальном времени, где пользователи могут авторизоваться через Google, редактировать профиль, отправлять и редактировать сообщения."
     }
   },
   "resume": {
