--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -103,7 +103,9 @@
     "chat": {
       "title": "ChatApp",
       "description": "ChatApp — это веб-приложение для обмена сообщениями в реальном времени, где пользователи могут авторизоваться через Google, редактировать профиль, отправлять и редактировать сообщения."
-    }
+    },
+    "github_title": "Новые проекты с GitHub",
+    "no_description": "Нет описания"
   },
   "resume": {
     "title": "Мое <span class=\"highlight\">Резюме</span>",
